@@ -320,6 +320,7 @@ C_LIB = \
 	stdlib_lib_startup.o \
 	stdlib_machine_test.o \
 	stdlib_main.o \
+	stdlib_main_stub.o \
 	stdlib_malloc.o \
 	stdlib_math.o \
 	stdlib_mkdtemp.o \
@@ -496,6 +497,7 @@ UNIX_LIB = \
 	stdlib_arg.o \
 	stdlib_getmemstats.o \
 	stdlib_main.o \
+	stdlib_main_stub.o \
 	stdlib_mkdtemp.o \
 	stdlib_mkstemp.o \
 	stdlib_mktemp.o \
